--- a/TrailsTracker/src/main/resources/static/index.html
+++ b/TrailsTracker/src/main/resources/static/index.html
@@ -35,12 +35,6 @@
 		</table>
 	</div>
 	
-<!-- 	<div id="buttonDiv">
-		<button id="createButton">Log a Trail</button>
-		<button id="updateButton">Edit a Trail</button>
-		<button id="deleteButton">Delete a Trail</button>	
-	</div> -->
-
 	<div id="logTrailDiv">
 		<h2>Log a Trail</h2>
 		<form name="logTrailForm">
@@ -72,7 +66,11 @@
 	
 	<div id="editTrailDiv">
 		<h2>Edit a Trail</h2>
-		<form id="editTrailForm">
+		<form name="editTrailForm">
+		
+			<label for="trailId">Trail ID: </label>
+			<input type="number" name="trailId"><br>
+	
 			<label for="updateName">Edit Name:</label>
 			<input type="text" id="updateName" name="updateName"><br>
 			
@@ -95,7 +93,14 @@
 			<label for="imageUrl">Change Image URL:</label>
 			<input type="text" id="imageUrl" name="imageUrl"><br>
 			
-			<input type="button" value="Edit Trail">
+			<button name="updateTrailButton">Edit Trail</button>
+		</form>
+	</div>
+	
+	<div>
+		<form name="deleteTrailForm">
+		<input type="number" name="trailId">
+		<button name="deleteTrail">Delete Trail</button>
 		</form>
 	</div>
 
