Update Function Fixed

--- a/TrailsTracker/src/main/resources/static/index.html
+++ b/TrailsTracker/src/main/resources/static/index.html
@@ -92,7 +92,7 @@
 				<option value="Out and Back">Out and Back</option>
 				<option value="Point to Point">Point to Point</option>
 			</select><br> <label for="imageUrl">Change Image URL:</label> <input
-				type="text" id="imageUrl" name="imageUrl"><br>
+				type="text" id="imageUrl" name="updateImageUrl"><br>
 
 			<button name="updateTrailButton">Edit Trail</button>
 		</form>
